# cpp_boilerplate

./: .gitignore  .gitlab-ci.yml  .travis.yml  CMakeLists.txt  README.md  appveyor.yml  conanfile.txt  rename_library.sh
.ci-scripts/: generate_gcov_badge.sh
.travis/: build.sh
examples/: CMakeLists.txt
examples/example1/: CMakeLists.txt  boilerplate.cpp
include/boilerplate/: boilerplate.h
include/cpp_boilerplate/: shared_export.h
include/lib1/: lib1.h  lib1_exports.h
include/lib2/: lib2.h  lib2_exports.h
include/module2/: module2.h
scripts/: build.sh
share/cpp_boilerplate/: shared
src/: CMakeLists.txt
src/boilerplate/: CMakeLists.txt
src/lib/: CMakeLists.txt
src/lib/lib1/: CMakeLists.txt  lib1.cpp
src/lib/lib2/: CMakeLists.txt  lib2.cpp
src/module_2/: CMakeLists.txt  module_2.cpp
test/: CMakeLists.txt
test/src/: unit-boilerplate.cpp  unit-fmt.cpp  unit-glm.cpp  unit-lib1.cpp  unit-lib2.cpp  unit-module2.cpp
